k8s/investment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investment-service
  labels:
    app: investment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: investment-service
  template:
    metadata:
      labels:
        app: investment-service
    spec:
      containers:
      - name: investment-service
        image: spelakoracin/backend-investment-service:latest
        ports:
        - containerPort: 8085
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
