k8s/transaction-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
      - name: transaction-service
        image: svitdocker123/backend-transaction-service:latest
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /transactions/health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /transactions/health
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
