k8s/budget-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-service
spec:
  selector:
    app: budget-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
      nodePort: 30003
