k8s/investment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investment-service
spec:
  selector:
    app: investment-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
