k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30011  # Specifična vrata za dostop do MongoDB
  selector:
    app: mongodb
