k8s/transaction-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  selector:
    app: transaction-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 30001
